# lookup2

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  acinclude.m4  autogen.sh  configure.ac  configure.in  index.html  install.el  params.json
comp/: Makefile.am  chiezo.el  chujiten.el  colloc.el  comp.el  genius.el  jargon.el  loaddef.el  oxford.el  rfc1983.el  srd.el
etc/comp/: chujiten.el  foldoc.el  iwakoku.el  loaddef.el  mypaedia.el  oxford.el  rika.el  vera.el
fonts/: fonts.alias  m17n-nr14.bdf
lisp/: .cvsignore  Makefile.am  TODO  aozora-view.el  bocu.el  evi-mule.el  evi.el  hanzi-py-table.el  lookup-auto.el  lookup-autoloads.el  lookup-cache.el  lookup-compile.el  lookup-content.el  lookup-extra.el  lookup-gaiji.el  lookup-history.el  lookup-kanji.el  lookup-logo.xpm  lookup-module.el  lookup-modules.el  lookup-record.el  lookup-search.el  lookup-select.el  lookup-summary.el  lookup-text.el  lookup-types.el  lookup-utils.el  lookup-vars.el  lookup-vars.el.in  lookup.el  ndbtonic.el  ndbuffer.el  ndcookie.el  nddsl.el  ndeb-binary.el  ndeb.el  ndest.el  ndgoo.el  ndic.el  ndict.el  (+81 more)
lisp/support-files/: support-chinakan.el  support-dkw-word.el  support-dkw2ucs.el  support-eijiro-pdic.el  support-eijiro.el  support-foldoc-fpw.el  support-jargon-fpw.el  support-jitsuu.el  support-jmdict.el  support-jtfrk.el  support-muller.el  support-ndweb.el  support-nhd.el  support-onmusic.el  support-oxford-eb.el  support-pdic-cj2.el  support-pdic-thai.el  support-rangjung.el  support-rfc1983.el  support-rfc4949.el  support-sbgy.el  support-sdic.el  support-srd.el  support-swjz.el  support-ucd.el  support-vera-fpw.el  support-waseikanji.el  support-wikipedia.el  support-xszd.el  support-zhongri.el  support-zigen.el
misc/: eb.patch  eblook.patch  jitsuu_mk_jukugo_list.rb  jitsuu_mk_oyaji_list.rb  quickstartindex.cc  quickstartsearch.cc  wikipedia.en.rb  wikipedia.ja.rb
texi/: .cvsignore  Makefile.am  lookup-faq.texi  lookup-org.el  lookup.ja.texi  lookup.org  lookup.texi  outline
web/: .cvsignore  Makefile  footer.html  header.html  index.scm  index.shtml  index.tpl.html  menu.scm  subpage.html
web/info/: Makefile  dictionaries.shtml  eblook.c.patch  screenshot.scm  screenshot.shtml  screenshot.tpl.html
web/ja/: .cvsignore  .htaccess  Makefile  header.html  header.scm  index.scm  index.shtml  index.tpl.html  menu.scm  news.scm  subpage.scm  tag.scm  template.scm
web/ja/eblook/: index.html
web/ja/guide/: Makefile  lookup-guide.texi
web/ja/howto/: Makefile  gaiji.scm  index.scm  os2-bitmap.scm
web/ja/info/: Makefile  download.scm  download.shtml  screenshot.scm  screenshot.shtml  screenshot.tpl.html  tips.scm  tips.shtml  tips.tpl.html
web/ja/lists/: Makefile  index.scm  index.shtml
web/ja/manual/: Makefile  lookup.texi
