AUTOMAKE_OPTIONS = foreign
SUBDIRS = lisp texi
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 autom4te.cache \
	configure config.h.in install-sh missing mkinstalldirs \
	stamp-h.in COPYING INSTALL Makefile.in
EXTRA_DIST = README.md misc/eb.patch misc/eblook.patch		\
misc/jitsuu_mk_jukugo_list.rb misc/jitsuu_mk_oyaji_list.rb
